# Agentic-AI-Form-Parser

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  citizen_repository.py  config.py  db.py  demo_samples.py  extraction.py  field_mappings.py  form_filler.py  main.py  preview_fill.py  session_repository.py
backend/app/exports/: __init__.py  csv_export.py  html_export.py  merged_json_schema.py
backend/app/extraction_quality/: __init__.py  checks.py  checks_extended.py  dates.py  report.py  rule_catalog.py
backend/app/intake/: __init__.py  pdf_render.py  pipeline.py  provenance.py  repo.py  retention.py  router.py  schemas.py  storage.py  tokens.py
backend/app/routers/: extraction_sessions.py
backend/app/schemas/: __init__.py  extraction_sessions.py
backend/baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
backend/baml_src/: main.baml
backend/tests/: conftest.py  test_citizens_api.py  test_extraction_compare.py  test_extraction_readiness.py  test_extraction_sessions_api.py  test_field_mappings.py  test_intake_api.py  test_main.py  test_preview_fill.py  test_rule_catalog.py  test_session_exports.py  test_session_repository.py
frontend/: README.md  index.html
frontend/src/: App.css  App.jsx  CitizensPortal.css  CitizensPortal.jsx  ExtractionHistoryPanel.css  ExtractionHistoryPanel.jsx  FillPreviewModal.css  FillPreviewModal.jsx  FormFillView.css  FormFillView.jsx  QualityRulesPanel.css  QualityRulesPanel.jsx  ReadinessReportPanel.css  ReadinessReportPanel.jsx
(+5 files in other folders)
